--- a/apps/personal-blog/src/styles.css
+++ b/apps/personal-blog/src/styles.css
@@ -8,33 +8,27 @@
   }
 
   h1 {
-    @apply text-6xl;
-    @apply font-bold;
-    @apply font-title;
+    @apply text-6xl font-bold font-title mb-8;
   }
 
   h2 {
-    @apply text-5xl;
-    @apply font-bold;
-    @apply font-title;
+    @apply text-5xl font-bold font-title mb-4;
   }
 
   h3 {
-    @apply text-4xl;
-    @apply font-bold;
-    @apply font-title;
+    @apply text-4xl font-bold font-title mb-2;
   }
 
   h4 {
-    @apply text-3xl;
-    @apply font-bold;
-    @apply font-title;
+    @apply text-3xl font-bold font-title mb-2;
   }
 
   h5 {
-    @apply text-2xl;
-    @apply font-bold;
-    @apply font-title;
+    @apply text-2xl font-bold font-title;
+  }
+
+  h6 {
+    @apply text-xl font-bold font-title;
   }
 
   hr {
