refactor: move hr style to global styles

--- a/apps/personal-blog/src/styles.css
+++ b/apps/personal-blog/src/styles.css
@@ -32,9 +32,7 @@
   }
 
   hr {
-    @apply w-1/6;
-    @apply my-4;
-    @apply border-gray-700;
+    @apply w-1/5 my-8 border-gray-700;
   }
 
   ul {
