--- a/apps/personal-blog/src/styles.css
+++ b/apps/personal-blog/src/styles.css
@@ -8,23 +8,23 @@
   }
 
   h1 {
-    @apply text-6xl font-bold font-title mb-8;
+    @apply text-5xl font-bold font-title mb-8;
   }
 
   h2 {
-    @apply text-5xl font-bold font-title mb-4;
+    @apply text-4xl font-bold font-title my-4;
   }
 
   h3 {
-    @apply text-4xl font-bold font-title mb-2;
+    @apply text-3xl font-bold font-title my-2;
   }
 
   h4 {
-    @apply text-3xl font-bold font-title mb-2;
+    @apply text-2xl font-bold font-title my-2;
   }
 
   h5 {
-    @apply text-2xl font-bold font-title;
+    @apply text-xl font-bold font-title;
   }
 
   h6 {
