feat(design): add padding for h5 and h6

--- a/apps/personal-blog/src/styles.css
+++ b/apps/personal-blog/src/styles.css
@@ -24,11 +24,11 @@
   }
 
   h5 {
-    @apply text-xl font-bold font-title;
+    @apply text-xl font-bold font-title py-4;
   }
 
   h6 {
-    @apply text-xl font-bold font-title;
+    @apply text-xl font-bold font-title py-4;
   }
 
   hr {
