feat(design): apply 18px font-size to whole app by default

--- a/apps/personal-blog/src/styles.css
+++ b/apps/personal-blog/src/styles.css
@@ -3,8 +3,12 @@
 @tailwind utilities;
 
 @layer base {
+  * {
+    @apply text-paragraph;
+  }
+
   p {
-    @apply font-paragraph;
+    @apply font-paragraph text-paragraph;
   }
 
   h1 {
