--- a/apps/personal-blog/src/styles.css
+++ b/apps/personal-blog/src/styles.css
@@ -56,7 +56,7 @@
   }
 
   a {
-    @apply text-blue-500;
+    @apply text-blue-700;
   }
 
   a:hover {
@@ -73,7 +73,7 @@
   }
 
   th {
-    @apply px-4 py-3 border border-gray-300 text-left font-bold;
+    @apply px-4 py-3 border border-gray-300 text-left font-bold text-xl;
   }
 
   td {
