--- a/apps/personal-blog/src/styles.css
+++ b/apps/personal-blog/src/styles.css
@@ -4,27 +4,27 @@
 
 @layer base {
   * {
-    @apply text-paragraph;
+    @apply text-paragraph md:text-md-paragraph;
   }
 
   p {
-    @apply font-paragraph text-paragraph;
+    @apply font-paragraph;
   }
 
   h1 {
-    @apply text-5xl font-bold font-title pb-16;
+    @apply text-3xl md:text-5xl font-bold font-title pb-16;
   }
 
   h2 {
-    @apply text-4xl font-bold font-title py-8;
+    @apply text-2xl md:text-4xl font-bold font-title py-8;
   }
 
   h3 {
-    @apply text-3xl font-bold font-title py-4;
+    @apply text-2xl md:text-3xl font-bold font-title py-4;
   }
 
   h4 {
-    @apply text-2xl font-bold font-title py-4;
+    @apply text-xl md:text-2xl font-bold font-title py-4;
   }
 
   h5 {
